# sixta-ci

./: .gitignore  .gitlab-ci.yml  .pre-commit-hooks.yaml  .sixta.yml.example  LICENSE  README.md  action.yml  pyproject.toml  sixta_review.py
.github/workflows/: test.yml
docs/: framework-support.md  gitlab-catalog.md  spring-boot-support.md
example/: .gitlab-ci.yml  .sixta.yml  manage.py  requirements.txt
example/.github/workflows/: sixta.yml
example/demo/: settings.py
example/shop/: models.py
example/shop/migrations/: 0001_initial.py  0002_order_index_and_backfill.py  0003_backfill_totals.py
example/spring-flyway/: pom.xml
example/spring-flyway/src/main/java/com/example/shop/: OrderRepository.java
example/spring-flyway/src/main/java/com/example/shop/db/migration/: V3__Backfill_totals.java
example/spring-flyway/src/main/resources/: application.properties
example/spring-flyway/src/main/resources/db/migration/: R__order_totals.sql  U2__drop_status_index.sql  V1__init.sql  V2__add_status_index.sql
example/spring-flyway/src/main/resources/mapper/: OrderMapper.xml
example/spring-liquibase/: build.gradle
example/spring-liquibase/src/main/resources/: application.yml
example/spring-liquibase/src/main/resources/db/changelog/: 001-init.sql  002-add-index.xml  db.changelog-master.yaml
hooks/: pre-commit
templates/: sixta-review.yml
tests/: conftest.py  test_alembic.py  test_badge.py  test_ddl_auto.py  test_flyway.py  test_github.py  test_java_sql.py  test_liquibase.py  test_outcome.py  test_rollback.py  test_sixta_review.py  test_v1.py
